[java] Explicitly using no-args constructor to create an instance of HttpClient using reflection.